<resources>
    <string name="app_name">Simple App</string>
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profile_management">Profile Management</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gender">Gender</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_user">Add</string>
</resources>
